# serializer version: 1
# name: test_binary_sensors[binary_sensor.living_room_tewke_switch_run_in_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.living_room_tewke_switch_run_in_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Run-in status',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Run-in status',
    'platform': 'tewke',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'run_in_status',
    'unique_id': 'hw123_sensor_run_in_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.living_room_tewke_switch_run_in_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Tewke Switch Run-in status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.living_room_tewke_switch_run_in_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.living_room_tewke_switch_screen-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.living_room_tewke_switch_screen',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Screen',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Screen',
    'platform': 'tewke',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'hw123_screen_on',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.living_room_tewke_switch_screen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'running',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Tewke Switch Screen',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.living_room_tewke_switch_screen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.living_room_tewke_switch_stabilisation_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.living_room_tewke_switch_stabilisation_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stabilisation status',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stabilisation status',
    'platform': 'tewke',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stabilisation_status',
    'unique_id': 'hw123_sensor_stabilisation_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.living_room_tewke_switch_stabilisation_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Tewke Switch Stabilisation status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.living_room_tewke_switch_stabilisation_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
